# xic

./: .gitignore  CMakeLists.txt  NOTICE  README.md  __init__.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
dev/: test_math.cpp
docs/rho/: index.md
include/Hardware/: DHT.hpp  GPS.hpp  MPU.hpp  Spatial.hpp
include/Rho/: Railway.hpp  Tunnel.hpp
include/Xi/: Array.hpp  Camera.hpp  Cert.hpp  Crypto.hpp  Device.hpp  File.hpp  Func.hpp  Graphics.hpp  InlineArray.hpp  Log.hpp  Map.hpp  Math.hpp  Mesh.hpp  Path.hpp  Primitives.hpp  Random.hpp  Regex.hpp  Shader.hpp  Spatial.hpp  String.hpp  Time.hpp  Tree.hpp  Vector.hpp  Window.hpp
resources/components/: Markdown.vue
resources/screens/: Index.screen.vue
src/: build.js  stubgen.py
src/Hardware/: DHT.cpp  GPS.cpp  MPU.cpp  Spatial.cpp
src/Xi/: Camera.cpp  Cert.cpp  Crypto.cpp  Device.cpp  File.cpp  Graphics.cpp  Math.cpp  Primitives.cpp  Random.cpp  Regex.cpp  Spatial.cpp  String.cpp  Time.cpp  Window.cpp
src/xi/: __init__.py
tests/: alljs.ts  grap.py
tests/render/: CMakeLists.txt  main.cpp
